{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 22,
  "lineage": "84a8a32d-2c08-07b3-32f2-47cbcb3fa0ba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lola-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-004eb5666f6b95505",
            "domain": "vpc",
            "id": "eipalloc-03533e3a",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0bc06c2a535cf6cf8",
            "private_dns": "ip-10-10-1-202.eu-central-1.compute.internal",
            "private_ip": "10.10.1.202",
            "public_dns": "ec2-52-58-7-82.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.58.7.82",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lola-vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-1986eb20",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-18-193-218-154.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.193.218.154",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lola-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:936026591534:internet-gateway/igw-04ab2328a68db38db",
            "id": "igw-04ab2328a68db38db",
            "owner_id": "936026591534",
            "vpc_id": "vpc-009e1855f4f52be43"
          },
          "dependencies": [
            "aws_vpc.lola-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lola-vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:936026591534:internet-gateway/igw-084072e87096ae6ac",
            "id": "igw-084072e87096ae6ac",
            "owner_id": "936026591534",
            "vpc_id": "vpc-055db9b138884e315"
          },
          "dependencies": [
            "aws_vpc.lola-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "lola-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03533e3a",
            "id": "nat-0a2e0b45e753cb7e1",
            "network_interface_id": "eni-0bc06c2a535cf6cf8",
            "private_ip": "10.10.1.202",
            "public_ip": "52.58.7.82",
            "subnet_id": "subnet-0b00ee5517e614244"
          },
          "dependencies": [
            "aws_eip.lola-vpc",
            "aws_internet_gateway.lola-vpc",
            "aws_subnet.lola-vpc-subnet-01",
            "aws_vpc.lola-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "lola-vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-1986eb20",
            "id": "nat-0914d48f6f7248413",
            "network_interface_id": "eni-0f5b2c90abda5b4d9",
            "private_ip": "10.10.1.49",
            "public_ip": "18.193.218.154",
            "subnet_id": "subnet-067605680f49b3268"
          },
          "dependencies": [
            "aws_eip.lola-vpc2",
            "aws_internet_gateway.lola-vpc2",
            "aws_subnet.lola-vpc2-subnet-01",
            "aws_vpc.lola-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lola-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:936026591534:route-table/rtb-08a77217e74be0124",
            "id": "rtb-08a77217e74be0124",
            "owner_id": "936026591534",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04ab2328a68db38db",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Description": "Route Table for public subnet lola-vpc-subnet-01",
              "Environment": "day-01",
              "Name": "lola-vpc"
            },
            "vpc_id": "vpc-009e1855f4f52be43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lola-vpc",
            "aws_vpc.lola-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lola-vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:936026591534:route-table/rtb-09bd0ab4172ae084c",
            "id": "rtb-09bd0ab4172ae084c",
            "owner_id": "936026591534",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-084072e87096ae6ac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Description": "Route Table for public subnet lola-vpc2-subnet-01",
              "Environment": "day-01",
              "Name": "lola-vpc2"
            },
            "vpc_id": "vpc-055db9b138884e315"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lola-vpc2",
            "aws_vpc.lola-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lola-vpc2-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:936026591534:route-table/rtb-0da93b1bac3e8dcff",
            "id": "rtb-0da93b1bac3e8dcff",
            "owner_id": "936026591534",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0914d48f6f7248413",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Description": "Route Table for private subnet lola-vpc2-subnet-02",
              "Environment": "day-01",
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-055db9b138884e315"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lola-vpc2",
            "aws_internet_gateway.lola-vpc2",
            "aws_nat_gateway.lola-vpc2",
            "aws_subnet.lola-vpc2-subnet-01",
            "aws_vpc.lola-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lola-vpc2-subnet-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:936026591534:route-table/rtb-0117e1934d8e8549d",
            "id": "rtb-0117e1934d8e8549d",
            "owner_id": "936026591534",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0914d48f6f7248413",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Description": "Route Table for private subnet lola-vpc2-subnet-03",
              "Environment": "day-01",
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-055db9b138884e315"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.lola-vpc2",
            "aws_internet_gateway.lola-vpc2",
            "aws_nat_gateway.lola-vpc2",
            "aws_subnet.lola-vpc2-subnet-01",
            "aws_vpc.lola-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lola-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089bbd01187a543e0",
            "route_table_id": "rtb-08a77217e74be0124",
            "subnet_id": "subnet-0b00ee5517e614244"
          },
          "dependencies": [
            "aws_internet_gateway.lola-vpc",
            "aws_route_table.lola-vpc",
            "aws_subnet.lola-vpc-subnet-01",
            "aws_vpc.lola-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lola-vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc48a53f8e0b1de8",
            "route_table_id": "rtb-09bd0ab4172ae084c",
            "subnet_id": "subnet-067605680f49b3268"
          },
          "dependencies": [
            "aws_internet_gateway.lola-vpc2",
            "aws_route_table.lola-vpc2",
            "aws_subnet.lola-vpc2-subnet-01",
            "aws_vpc.lola-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lola-vpc2-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ee642c6963f5c8d",
            "route_table_id": "rtb-0da93b1bac3e8dcff",
            "subnet_id": "subnet-0b20706b2e88b85a9"
          },
          "dependencies": [
            "aws_eip.lola-vpc2",
            "aws_internet_gateway.lola-vpc2",
            "aws_nat_gateway.lola-vpc2",
            "aws_route_table.lola-vpc2-subnet-02",
            "aws_subnet.lola-vpc2-subnet-01",
            "aws_subnet.lola-vpc2-subnet-02",
            "aws_vpc.lola-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lola-vpc2-subnet-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03509a295de109304",
            "route_table_id": "rtb-0117e1934d8e8549d",
            "subnet_id": "subnet-0cec51e212c726c4e"
          },
          "dependencies": [
            "aws_eip.lola-vpc2",
            "aws_internet_gateway.lola-vpc2",
            "aws_nat_gateway.lola-vpc2",
            "aws_route_table.lola-vpc2-subnet-03",
            "aws_subnet.lola-vpc2-subnet-01",
            "aws_subnet.lola-vpc2-subnet-03",
            "aws_vpc.lola-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lola-vpc-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:936026591534:subnet/subnet-0b00ee5517e614244",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-0b00ee5517e614244",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "936026591534",
            "tags": {
              "Description": "Public subnet-01 for lola-vpc VPC",
              "Environment": "day-01",
              "Name": "lola-vpc-subnet-01"
            },
            "tags_all": {
              "Description": "Public subnet-01 for lola-vpc VPC",
              "Environment": "day-01",
              "Name": "lola-vpc-subnet-01"
            },
            "vpc_id": "vpc-009e1855f4f52be43"
          },
          "dependencies": [
            "aws_vpc.lola-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lola-vpc2-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:936026591534:subnet/subnet-067605680f49b3268",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-067605680f49b3268",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "936026591534",
            "tags": {
              "Description": "Public subnet-01 for lola-vpc2 VPC",
              "Environment": "day-01",
              "Name": "lola-vpc2-subnet-01"
            },
            "tags_all": {
              "Description": "Public subnet-01 for lola-vpc2 VPC",
              "Environment": "day-01",
              "Name": "lola-vpc2-subnet-01"
            },
            "vpc_id": "vpc-055db9b138884e315"
          },
          "dependencies": [
            "aws_vpc.lola-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lola-vpc2-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:936026591534:subnet/subnet-0b20706b2e88b85a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-0b20706b2e88b85a9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "936026591534",
            "tags": {
              "Description": "Private Subnet lola-vpc2-subnet-02 for VPC lola-vpc2",
              "Environment": "day-01",
              "Name": "lola-vpc2-subnet-02"
            },
            "tags_all": {
              "Description": "Private Subnet lola-vpc2-subnet-02 for VPC lola-vpc2",
              "Environment": "day-01",
              "Name": "lola-vpc2-subnet-02"
            },
            "vpc_id": "vpc-055db9b138884e315"
          },
          "dependencies": [
            "aws_vpc.lola-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lola-vpc2-subnet-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:936026591534:subnet/subnet-0cec51e212c726c4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.3.0/24",
            "id": "subnet-0cec51e212c726c4e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "936026591534",
            "tags": {
              "Description": "Private Subnet lola-vpc2-subnet-03 for VPC lola-vpc2",
              "Environment": "day-01",
              "Name": "lola-vpc2-subnet-03"
            },
            "tags_all": {
              "Description": "Private Subnet lola-vpc2-subnet-03 for VPC lola-vpc2",
              "Environment": "day-01",
              "Name": "lola-vpc2-subnet-03"
            },
            "vpc_id": "vpc-055db9b138884e315"
          },
          "dependencies": [
            "aws_vpc.lola-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lola-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:936026591534:vpc/vpc-009e1855f4f52be43",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0a04ceeaf9c3dee4e",
            "default_route_table_id": "rtb-0fd6c689c6a9cd62d",
            "default_security_group_id": "sg-06cd23e0f911fb037",
            "dhcp_options_id": "dopt-008bcc68",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-009e1855f4f52be43",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fd6c689c6a9cd62d",
            "owner_id": "936026591534",
            "tags": {
              "Description": "Example public VPC",
              "Environment": "day-01",
              "Name": "lola-vpc"
            },
            "tags_all": {
              "Description": "Example public VPC",
              "Environment": "day-01",
              "Name": "lola-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lola-vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:936026591534:vpc/vpc-055db9b138884e315",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0c426614cafb00f5e",
            "default_route_table_id": "rtb-07949d22cea26eaaa",
            "default_security_group_id": "sg-0db6041aeeda4bb18",
            "dhcp_options_id": "dopt-008bcc68",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-055db9b138884e315",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07949d22cea26eaaa",
            "owner_id": "936026591534",
            "tags": {
              "Description": "Example public private VPC",
              "Environment": "day-01",
              "Name": "lola-vpc2"
            },
            "tags_all": {
              "Description": "Example public private VPC",
              "Environment": "day-01",
              "Name": "lola-vpc2"
            }
          }
        }
      ]
    }
  ]
}